# AgentFlow-Launcher

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agentflow/: __init__.py
agentflow/core/: __init__.py  agent.py  loader.py  schemas.py  skill.py  workflow.py
agentflow/providers/: __init__.py  base.py  deepseek_provider.py  mock_provider.py  ollama_provider.py  openai_provider.py  qwen_provider.py
agentflow/utils/: __init__.py  config.py  logging.py
agents/: demo_research_agent.yaml
deploy/: README.md
deploy/tunnel/: cloudflare_tunnel.md  expose_api_example.ps1  expose_api_example.sh  localtunnel.md  ngrok.md
desktop/linux/: agentflow-launcher.desktop  start_agentflow.sh
desktop/macos/: create_app_shortcut.md  start_agentflow.command
desktop/windows/: create_shortcut.ps1  start_agentflow.bat
docs/: architecture.md  desktop_deployment.md  provider_adapters.md  web_api_deployment.md
docs/images/: README.md
scripts/: package_release.py  run_demo.py  run_server.py  setup_unix.sh  setup_windows.ps1  validate_project.py
server/: __init__.py  main.py
skills/: code_explainer.yaml  prompt_optimizer.yaml  text_summarizer.yaml
tests/: __init__.py  test_agent_loader.py  test_api_health.py  test_skill_runner.py  test_workflow_runner.py
web/: app.js  index.html  styles.css
workflows/: content_pipeline.yaml
