[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentflow-launcher"
version = "1.0.0"
description = "A cross-platform toolkit for building, running, and deploying LLM-powered agents, workflows, and skills to desktop and web environments."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AgentFlow Team" }
]
keywords = [
    "ai", "llm", "agent", "workflow", "skill",
    "fastapi", "cross-platform", "openai", "deepseek",
    "ollama", "desktop", "web-api"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
openai = ["openai>=1.12.0"]
dev = ["pytest>=8.0.0", "mypy>=1.8.0"]

[project.urls]
Homepage = "https://github.com/Laityperfect7/AgentFlow-Launcher"
Documentation = "https://github.com/Laityperfect7/AgentFlow-Launcher#readme"
Repository = "https://github.com/Laityperfect7/AgentFlow-Launcher"
Issues = "https://github.com/Laityperfect7/AgentFlow-Launcher/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
